tests/sksl/errors/ReservedNameVarying.glsl
### Compilation failed:

error: 1: name 'varying' is reserved
int varying;
    ^^^^^^^
1 error
